--- a/templates/raffler.html
+++ b/templates/raffler.html
@@ -42,7 +42,30 @@
 							<div id="buttonreplacement"  style="margin-left:30px; display:none;">
 							<img src="/static/images/loader.gif" alt="loading...">
 							</div>
-							</form>							
+							</form>
+							
+							<script type="text/javascript">
+							function ButtonClicked()
+							{
+								document.getElementById("formsubmitbutton").style.display = "none"; // to undisplay
+								document.getElementById("buttonreplacement").style.display = ""; // to display
+								return true;
+							}
+							var FirstLoading = true;
+							function RestoreSubmitButton()
+							{
+								if( FirstLoading )
+								{
+									FirstLoading = false;
+									return;
+								}
+							document.getElementById("formsubmitbutton").style.display = ""; // to display
+							document.getElementById("buttonreplacement").style.display = "none"; // to undisplay
+							}
+							// To disable restoring submit button, disable or delete next line.
+							document.onfocus = RestoreSubmitButton;
+							</script>
+							
 						</div>
 					</section>
 
